# src/main/java/com/francislainy/sobe/controller/question/QuestionController.java
@@ -1,4 +1,4 @@
-package com.francislainy.sobe.controller;
+package com.francislainy.sobe.controller.question;
 
 import com.francislainy.sobe.model.Question;
 import com.francislainy.sobe.service.QuestionService;
@@ -6,10 +6,14 @@ import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.UUID;
 
 @RestController
 @RequestMapping("/api/v1/questions")
@@ -21,5 +25,10 @@ public class QuestionController {
     @PostMapping
     public ResponseEntity<Question> createQuestion(@Valid @RequestBody Question question) {
         return new ResponseEntity<>(questionService.createQuestion(question), HttpStatus.CREATED);
+    }
+
+    @PutMapping("/{questionId}")
+    public ResponseEntity<Question> updateQuestion(@PathVariable UUID questionId, @Valid @RequestBody Question question) {
+        return new ResponseEntity<>(questionService.updateQuestion(questionId, question), HttpStatus.OK);
     }
 }
